project-description color modifying and add one web project

--- a/index.html
+++ b/index.html
@@ -203,12 +203,6 @@
             <div class="projects-list-wrap">
               <div class="project-result" data-type="Mark-up">
                 <h4 class="project-title">디자인 시안 1 마크업</h4>
-                <!-- <img
-                  src="imgs/user1.png"
-                  alt="design1"
-                  class="design-template"
-                />
-                <i class="fas fa-arrow-right"></i> -->
                 <a href="" class="design-result" target="blank">
                   <img
                     src="imgs/user1.png"
@@ -223,12 +217,6 @@
               </div>
               <div class="project-result" data-type="Mark-up">
                 <h4 class="project-title">디자인 시안 2 마크업</h4>
-                <!-- <img
-                  src="imgs/user1.png"
-                  alt="design1"
-                  class="design-template"
-                />
-                <i class="fas fa-arrow-right"></i> -->
                 <a href="" class="design-result" target="blank">
                   <img
                     src="imgs/user1.png"
@@ -243,15 +231,21 @@
               </div>
               <div class="project-result" data-type="Active-web">
                 <h4 class="project-title">반응형 웹사이트 with JS</h4>
-                <a href="" class="design-result" target="blank">
+                <a
+                  href="http://unnatural-legs.surge.sh/"
+                  class="design-result"
+                  target="blank"
+                >
                   <img
-                    src="imgs/user1.png"
+                    src="imgs/webproject1.PNG"
                     alt="design1-result"
                     class="design-template"
                   />
                   <div class="project-description">
-                    <h3>my mobile example2</h3>
-                    <span>clone coding with java and android2</span>
+                    <h3>When & Where?</h3>
+                    <span
+                      >세계 여행에 필요한 월별 기후를 알려주는 Web site</span
+                    >
                   </div>
                 </a>
               </div>
