add markup projects

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
               <div class="image-container">
                 <div class="each-image">
                   <strong>MarkUp</strong>
-                  <img src="imgs/markup1.jpg" alt="markup1" />
+                  <img src="imgs/yogaSiteMarkup.jpg" alt="yoga-site" />
                 </div>
                 <div class="each-image">
                   <strong>MarkUp</strong>
-                  <img src="imgs/markup2.jpg" alt="markup2" />
+                  <img src="imgs/snowSiteMarkup3.JPG" alt="snow-site" />
                 </div>
                 <div class="each-image">
                   <strong>JS Project</strong>
@@ -203,29 +203,43 @@
             <div class="projects-list-wrap">
               <div class="project-result" data-type="Mark-up">
                 <h4 class="project-title">디자인 시안 1 마크업</h4>
-                <a href="" class="design-result" target="blank">
+                <a
+                  href="https://jisu-y.github.io/Yoga-web-site/"
+                  class="design-result"
+                  target="blank"
+                >
                   <img
-                    src="imgs/user1.png"
-                    alt="design1-result"
+                    src="imgs/yogaSiteMarkup.jpg"
+                    alt="yogasite-result"
                     class="design-template"
                   />
                   <div class="project-description">
-                    <h3>my mobile example</h3>
-                    <span>clone coding with java and android</span>
+                    <h3>Yoga Site</h3>
+                    <span
+                      >Yoga Site Mark Up Porject. From an image template to a
+                      resposive web site.</span
+                    >
                   </div>
                 </a>
               </div>
               <div class="project-result" data-type="Mark-up">
                 <h4 class="project-title">디자인 시안 2 마크업</h4>
-                <a href="" class="design-result" target="blank">
+                <a
+                  href="https://jisu-y.github.io/Snow_website/"
+                  class="design-result"
+                  target="blank"
+                >
                   <img
-                    src="imgs/user1.png"
+                    src="imgs/snowSiteMarkup3.JPG"
                     alt="design1-result"
                     class="design-template"
                   />
                   <div class="project-description">
-                    <h3>my mobile example1</h3>
-                    <span>clone coding with java and android1</span>
+                    <h3>Snow Site</h3>
+                    <span
+                      >Snow Site(an agency portfolio template) Mark Up Porject.
+                      From a template to a resposive web site.</span
+                    >
                   </div>
                 </a>
               </div>
