Agata bielen Mark up Project is added

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
                   <img src="imgs/snowSiteMarkup3.JPG" alt="snow-site" />
                 </div>
                 <div class="each-image">
+                  <strong>MarkUp</strong>
+                  <img src="imgs/AgataSiteMarkup_small.JPG" alt="agata-site" />
+                </div>
+                <div class="each-image">
                   <strong>JS Project</strong>
                   <img src="imgs/webproject1.PNG" alt="webproject1" />
                 </div>
@@ -243,6 +247,29 @@
                   </div>
                 </a>
               </div>
+
+              <div class="project-result" data-type="Mark-up">
+                <h4 class="project-title">디자인 시안 3 마크업</h4>
+                <a
+                  href="https://jisu-y.github.io/AgataBielen-web-site/"
+                  class="design-result"
+                  target="blank"
+                >
+                  <img
+                    src="imgs/AgataSiteMarkup_small.JPG"
+                    alt="Agata-result_small"
+                    class="design-template"
+                  />
+                  <div class="project-description">
+                    <h3>Agata Bielen Site</h3>
+                    <span
+                      >Agata Bielen Site Mark Up Porject. From an image template
+                      to a resposive web site.</span
+                    >
+                  </div>
+                </a>
+              </div>
+
               <div class="project-result" data-type="Active-web">
                 <h4 class="project-title">반응형 웹사이트 with JS</h4>
                 <a
