[html] add sub-stacks

--- a/index.html
+++ b/index.html
@@ -169,15 +169,32 @@
     </section>
     <!-- Skills -->
     <section id="skills" class="section skills">
-      <!-- <img src="icons/pale-659.png" alt="" class="airplane" /> -->
       <div class="wrap">
         <h1>Skills</h1>
-        <p>click activated skills and move to related projects</p>
-        <div class="skills-container">
-          <div class="skill-card html"><i class="fab fa-html5"></i>HTML</div>
-          <div class="skill-card css"><i class="fab fa-css3"></i>CSS</div>
-          <div class="skill-card js"><i class="fab fa-js"></i>JS</div>
-          <div class="skill-card react"><i class="fab fa-react"></i>React</div>
+        <div class="main-stacks">
+          <h4 class="main-stacks-title">Main-Stacks</h4>
+          <div class="skills-container">
+            <div class="skill-card html"><i class="fab fa-html5"></i>HTML</div>
+            <div class="skill-card css"><i class="fab fa-css3"></i>CSS</div>
+            <div class="skill-card js"><i class="fab fa-js"></i>JS</div>
+            <div class="skill-card react">
+              <i class="fab fa-react"></i>React
+            </div>
+          </div>
+        </div>
+        <div class="sub-stacks">
+          <h4 class="sub-stacks-title">Sub-Stacks and more</h4>
+          <div class="sub-stacks-container">
+            <div class="sub-stacks-card mongodb">
+              <i class="fas fa-database"></i>MongoDB<br />(Mongoose)
+            </div>
+            <div class="sub-stacks-card nodejs">
+              <i class="fab fa-node-js"></i>Node.js<br />(express)
+            </div>
+            <div class="sub-stacks-card git">
+              <i class="fab fa-github"></i>Git/Github
+            </div>
+          </div>
         </div>
       </div>
     </section>
