[css] preview fixed

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
               <button class="btn-resume">이력서 다운</button>
             </div>
           </div>
+          <p class="preview-title">Previews</p>
           <div class="preview">
             <div class="preview-skills" data-set="#skills">
               <span class="this">Skills</span>
@@ -129,7 +130,7 @@
                   <img src="imgs/AgataSiteMarkup_small.JPG" alt="agata-site" />
                 </div>
                 <div class="each-image">
-                  <strong>JS Project</strong>
+                  <strong>Active Web</strong>
                   <img src="imgs/webproject1.PNG" alt="webproject1" />
                 </div>
                 <div class="each-image">
@@ -159,7 +160,7 @@
               </div>
               <div class="contents">
                 <span>010-6490-6210</span>
-                <span>jisu129@gmail.com</span>
+                <span>jisu129@<br />gmail.com</span>
                 <span>JISUY</span>
               </div>
             </div>
