--- a/index.html
+++ b/index.html
@@ -175,11 +175,62 @@
         <div class="main-stacks">
           <h4 class="main-stacks-title">Main-Stacks</h4>
           <div class="skills-container">
-            <div class="skill-card html"><i class="fab fa-html5"></i>HTML</div>
-            <div class="skill-card css"><i class="fab fa-css3"></i>CSS</div>
-            <div class="skill-card js"><i class="fab fa-js"></i>JS</div>
-            <div class="skill-card react">
-              <i class="fab fa-react"></i>React
+            <div class="container-divide-hc">
+              <div class="skill-card html">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front html">
+                    <i class="fab fa-html5"></i>HTML
+                  </div>
+                  <div class="flip-card-back">
+                    <p>
+                      HTML/CSS를 이용하여 주어진 디자인 <br />
+                      레이아웃에 따라 웹을 구성할 수 있습니다
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-card css">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front css">
+                    <i class="fab fa-css3"></i>CSS
+                  </div>
+                  <div class="flip-card-back">
+                    <p>
+                      CSS Media Query를 이용하여 <br />
+                      반응형 웹을 구현할 수 있습니다
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="container-divide-jr">
+              <div class="skill-card js">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front js">
+                    <i class="fab fa-js"></i>Vanila JS
+                  </div>
+                  <div class="flip-card-back">
+                    <p>
+                      DOM 객체를 제어하여<br />
+                      동적 사이트를 구현할 수 있습니다
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="skill-card react">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front react">
+                    <i class="fab fa-react"></i>React
+                  </div>
+                  <div class="flip-card-back">
+                    <p>
+                      Redux 사용 머머머머머머<br />
+                      Express/MongoDB를 연동하여 <br />Client와 Server를 구성할
+                      수 있습니다
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
