[html, css] projects form changed

--- a/index.html
+++ b/index.html
@@ -274,104 +274,137 @@
           <!-- 항목에 따른 projects 리스트들 -->
           <div class="project-list">
             <div class="projects-list-wrap">
-              <div class="project-result" data-type="Mark-up">
-                <h4 class="project-title">디자인 시안 1 마크업</h4>
+              <!-- mark up 1 -->
+              <div class="project-each" data-type="Mark-up">
                 <a
                   href="https://jisu-y.github.io/Yoga-web-site/"
-                  class="design-result"
+                  class="image-container-left"
                   target="blank"
                 >
                   <img
                     src="imgs/yogaSiteMarkup.jpg"
                     alt="yogasite-result"
-                    class="design-template"
+                    class="each-project-img"
                   />
-                  <div class="project-description">
-                    <h3>Yoga Site</h3>
+                </a>
+                <div class="des-container-right">
+                  <h4 class="each-project-title">디자인 시안 1 마크업</h4>
+                  <div class="each-project-description">
                     <span
                       >Yoga Site Mark Up Porject. From an image template to a
                       resposive web site.</span
                     >
                   </div>
-                </a>
+                  <span class="each-project-tag">Mark up</span>
+                  <div class="each-project-stacks">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                  </div>
+                </div>
               </div>
-              <div class="project-result" data-type="Mark-up">
-                <h4 class="project-title">디자인 시안 2 마크업</h4>
+              <!-- mark up 2 -->
+              <div class="project-each" data-type="Mark-up">
                 <a
                   href="https://jisu-y.github.io/Snow_website/"
-                  class="design-result"
+                  class="image-container-left"
                   target="blank"
                 >
                   <img
                     src="imgs/snowSiteMarkup3.JPG"
                     alt="design1-result"
-                    class="design-template"
+                    class="each-project-img"
                   />
-                  <div class="project-description">
-                    <h3>Snow Site</h3>
+                </a>
+                <div class="des-container-right">
+                  <h4 class="project-title">디자인 시안 2 마크업</h4>
+                  <div class="each-project-description">
                     <span
                       >Snow Site(an agency portfolio template) Mark Up Porject.
                       From a template to a resposive web site.</span
                     >
                   </div>
-                </a>
+                  <span class="each-project-tag">Mark up</span>
+                  <div class="each-project-stacks">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                  </div>
+                </div>
               </div>
-
-              <div class="project-result" data-type="Mark-up">
-                <h4 class="project-title">디자인 시안 3 마크업</h4>
+              <!-- mark up 3 -->
+              <div class="project-each" data-type="Mark-up">
                 <a
                   href="https://jisu-y.github.io/AgataBielen-web-site/"
-                  class="design-result"
+                  class="image-container-left"
                   target="blank"
                 >
                   <img
                     src="imgs/AgataSiteMarkup_small.JPG"
                     alt="Agata-result_small"
-                    class="design-template"
+                    class="each-project-img"
                   />
-                  <div class="project-description">
-                    <h3>Agata Bielen Site</h3>
+                </a>
+                <div class="des-container-right">
+                  <h4 class="project-title">디자인 시안 3 마크업</h4>
+                  <div class="each-project-description">
                     <span
                       >Agata Bielen Site Mark Up Porject. From an image template
                       to a resposive web site.</span
                     >
                   </div>
-                </a>
+                  <span class="each-project-tag">Mark up</span>
+                  <div class="each-project-stacks">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                  </div>
+                </div>
               </div>
-
-              <div class="project-result" data-type="Active-web">
-                <h4 class="project-title">반응형 웹사이트 with JS</h4>
+              <!-- when & where -->
+              <div class="project-each" data-type="Active-web">
                 <a
                   href="http://unnatural-legs.surge.sh/"
-                  class="design-result"
+                  class="image-container-left"
                   target="blank"
                 >
                   <img
                     src="imgs/webproject1.PNG"
                     alt="design1-result"
-                    class="design-template"
+                    class="each-project-img"
                   />
-                  <div class="project-description">
-                    <h3>When & Where?</h3>
+                </a>
+                <div class="des-container-right">
+                  <h4 class="project-title">
+                    반응형 웹사이트 with JS / When & Where?
+                  </h4>
+                  <div class="each-project-description">
                     <span
                       >세계 여행에 필요한 월별 기후를 알려주는 Web site</span
                     >
                   </div>
-                </a>
+                  <span class="each-project-tag">Active Web</span>
+                  <div class="each-project-stacks">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>Vanila JS</span>
+                  </div>
+                </div>
               </div>
-              <div class="project-result" data-type="React-web">
-                <h4 class="project-title">React Web App</h4>
-                <a href="" class="design-result" target="blank">
-                  <img
-                    src="imgs/user1.png"
-                    alt="design1-result"
-                    class="design-template"
-                  />
-                  <div class="project-description">
-                    <h3>my mobile example3</h3>
+              <!-- react app -->
+              <div class="project-each" data-type="React-web">
+                <a href="" class="image-container-left" target="blank">
+                  <img src="imgs/user1.png" alt="" class="each-project-img" />
+                </a>
+                <div class="des-container-right">
+                  <h4 class="project-title">React Web App</h4>
+                  <div class="each-project-description">
                     <span>clone coding with java and android3</span>
                   </div>
-                </a>
+                  <span class="each-project-tag">React-web-app</span>
+                  <div class="each-project-stacks">
+                    <span>React</span>
+                    <span>Express</span>
+                    <span>Mongoose</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
