[js] scroll reveal slide left and right

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <img src="icons/abstract-709.png" alt="" class="down" />
       </div>
       <div class="wrap">
-        <h1>RESUME</h1>
-        <div class="main-container">
+        <h1 class="slide-right">RESUME</h1>
+        <div class="main-container slide-left">
           <div class="details">
             <div class="details-wrap">
               <img src="imgs/user1.png" alt="" />
@@ -469,6 +469,7 @@
       <img src="icons/clip-638.png" alt="" />
       <img src="icons/bermuda-372.png" alt="" class="flame" />
     </button>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
   </body>
 </html>
