[html, css] hover to scale up and play gif

--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@
                     alt="yogasite-result"
                     class="each-project-img"
                   />
+                  <img
+                    src="videos/Yoga Site - Chrome 2021-09-20 13-24-20.gif"
+                    alt="yogasite-result"
+                    class="each-project-gif"
+                  />
                 </a>
                 <div class="des-container-right">
                   <h4 class="each-project-title">디자인 시안 1 마크업</h4>
@@ -314,6 +319,11 @@
                     src="imgs/snowSiteMarkup3.JPG"
                     alt="design1-result"
                     class="each-project-img"
+                  />
+                  <img
+                    src="videos/Snow website - Chrome 2021-09-20 13-49-34.gif"
+                    alt="yogasite-result"
+                    class="each-project-gif"
                   />
                 </a>
                 <div class="des-container-right">
@@ -343,6 +353,11 @@
                     alt="Agata-result_small"
                     class="each-project-img"
                   />
+                  <img
+                    src="videos/Agata Bielen - Chrome 2021-09-20 13-50-59.gif"
+                    alt="yogasite-result"
+                    class="each-project-gif"
+                  />
                 </a>
                 <div class="des-container-right">
                   <h4 class="project-title">디자인 시안 3 마크업</h4>
@@ -371,6 +386,11 @@
                     alt="design1-result"
                     class="each-project-img"
                   />
+                  <img
+                    src="videos/My Weather for Travel App - Chrome 2021-07-03 21-31-10.gif"
+                    alt="yogasite-result"
+                    class="each-project-gif"
+                  />
                 </a>
                 <div class="des-container-right">
                   <h4 class="project-title">
@@ -393,6 +413,11 @@
               <div class="project-each" data-type="React-web">
                 <a href="" class="image-container-left" target="blank">
                   <img src="imgs/user1.png" alt="" class="each-project-img" />
+                  <img
+                    src="videos/Yoga Site - Chrome 2021-09-20 13-24-20.gif"
+                    alt="yogasite-result"
+                    class="each-project-gif"
+                  />
                 </a>
                 <div class="des-container-right">
                   <h4 class="project-title">React Web App</h4>
