[css] add skill-card a transition delay

--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
         <div class="main-container slide-left">
           <div class="details">
             <div class="details-wrap">
-              <img src="imgs/user1.png" alt="" />
+              <img src="imgs/Profile.jpg" alt="" />
               <ul class="my-info">
-                <li><span>이름: ㅇㅇㅇ</span></li>
+                <!-- <li><span>이름: ㅇㅇㅇ</span></li>
                 <li><span>생년월일: 0000-00-00</span></li>
                 <li><span>나이: 만 00세</span></li>
                 <li><span>주소: ㅇㅇㅇ ㅇㅇㅇ ㅇㅇㅇ ㅇㅇㅇ</span></li>
-                <li><span>학력: ㅇㅇㅇㅇㅇ ㅇㅇㅇㅇㅇ ㅇㅇ</span></li>
-                <!-- <li><span>이름: 유지수</span></li>
+                <li><span>학력: ㅇㅇㅇㅇㅇ ㅇㅇㅇㅇㅇ ㅇㅇ</span></li> -->
+                <li><span>이름: 유지수</span></li>
                 <li><span>생년월일: 1995-02-20</span></li>
                 <li><span>나이: 만 26세</span></li>
-                <li><span>주소: 경기도 안산시 단원구 백운동(초지역)</span></li>
-                <li><span>학력: 국민대학교 전자공학부 졸업('19년)</span></li> -->
+                <li><span>주소: 경기도 안산시 단원구</span></li>
+                <li><span>학력: 국민대학교 전자공학부 졸업('19년)</span></li>
               </ul>
             </div>
             <div class="details-description-wrap">
@@ -82,12 +82,13 @@
                 <span>안녕하세요 신입 프론트엔드 개발자 유지수입니다.</span>
                 <br />
                 <br />
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-                hic iusto, cum quisquam magni dolorem eum praesentium dolorum,
-                doloremque perferendis corrupti, minima dolores soluta ad culpa
-                non. Ex assumenda aliquam perferendis vel sapiente, quae culpa
-                laboriosam sed? Accusamus quasi nihil deleniti temporibus error,
-                illum fuga, vel explicabo saepe cumque sapiente!
+                전자공학도로서 여러 토이 프로젝트를 진행해보며 만든 결과물에
+                뿌듯함과 성취감을 느껴왔습니다.<br />
+                하지만 HW 부품없이 내가 원하는 것을 만들 수는 없을까?<br />
+                라는 질문에서부터 시작하여 웹 프론트엔드에 대해 알아가기
+                시작하며<br />
+                단기간이지만 제가 해야할 것을 알고 있습니다.<br /><br />
+                개발자로 성장함에 있어 꾸준함을 무기로 성장해 나가겠습니다.
               </p>
               <button class="btn-resume">이력서 다운</button>
             </div>
