[css] background animation parallax
need to fix a project part background

--- a/index.html
+++ b/index.html
@@ -13,51 +13,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <canvas id="canvas"></canvas>
     <!-- Home(Start) -->
-    <section id="home" class="section home">
-      <div class="home-image-container">
-        <img src="icons/bermuda-414.png" alt="" class="cloud1" />
-        <img src="icons/bermuda-415.png" alt="" class="cloud2" />
-        <img src="icons/bermuda-419.png" alt="" class="cloud3" />
-        <img src="icons/bermuda-423.png" alt="" class="cloud4" />
-        <img src="icons/bermuda-424.png" alt="" class="cloud5" />
-        <img src="icons/bermuda-425.png" alt="" class="cloud6" />
-        <img src="icons/pluto-145.png" alt="" class="cloud7" />
-        <img src="icons/pluto-148.png" alt="" class="cloud8" />
+    <div class="home-wrap">
+      <div class="home-info">
+        <h1 class="hello">HELLO</h1>
       </div>
-      <div class="home-wrap">
-        <h1>YOO JISU</h1>
-        <div class="line"></div>
-        <h3>
-          안녕하세요.
-          <br />
-          <br />
-          프론트엔드 신입 개발자 유지수입니다.
-        </h3>
-        <div class="line"></div>
-      </div>
-
-      <!-- <button class="btn-start"></button> -->
-    </section>
-    <!-- 그림 -->
+    </div>
     <!-- Main -->
     <section id="main" class="section main">
-      <div class="home-bottom-container">
-        <img
-          src="icons/cherry-white-cloud.png"
-          alt=""
-          class="bottom-image image-left"
-        />
-        <img
-          src="icons/cherry-white-cloud-1.png"
-          alt=""
-          class="bottom-image image-right"
-        />
-        <img src="icons/conifer-172.png" alt="" class="dots" />
-        <img src="icons/spot-dot.png" alt="" class="dot" />
-        <img src="icons/spot-dot.png" alt="" class="dot dot2" />
-        <img src="icons/abstract-709.png" alt="" class="down" />
-      </div>
       <div class="wrap">
         <h1 class="slide-right">RESUME</h1>
         <div class="main-container slide-left">
@@ -79,15 +43,19 @@
             </div>
             <div class="details-description-wrap">
               <p class="my-description">
-                <span>안녕하세요 신입 프론트엔드 개발자 유지수입니다.</span>
+                <span
+                  >안녕하세요, <br />
+                  신입 프론트엔드 개발자 유지수입니다.</span
+                >
                 <br />
                 <br />
                 전자공학도로서 여러 토이 프로젝트를 진행해보며 만든 결과물에
                 뿌듯함과 성취감을 느껴왔습니다.<br />
                 하지만 HW 부품없이 내가 원하는 것을 만들 수는 없을까?<br />
                 라는 질문에서부터 시작하여 웹 프론트엔드에 대해 알아가기
-                시작하며<br />
-                단기간이지만 제가 해야할 것을 알고 있습니다.<br /><br />
+                시작했고,<br />
+                단기간이지만 5개월이라는 시간동안 스스로 해야할 것을 파악해가며
+                나아가고 있습니다.<br /><br />
                 개발자로 성장함에 있어 꾸준함을 무기로 성장해 나가겠습니다.
               </p>
               <button class="btn-resume">이력서 다운</button>
@@ -186,7 +154,7 @@
                   <div class="flip-card-back">
                     <p>
                       HTML/CSS를 이용하여 주어진 디자인 <br />
-                      레이아웃에 따라 웹을 구성할 수 있습니다
+                      레이아웃에 따라 웹 구성 가능
                     </p>
                   </div>
                 </div>
@@ -197,10 +165,7 @@
                     <i class="fab fa-css3"></i>CSS
                   </div>
                   <div class="flip-card-back">
-                    <p>
-                      CSS Media Query를 이용하여 <br />
-                      반응형 웹을 구현할 수 있습니다
-                    </p>
+                    <p>CSS Media Query를 이용하여 반응형 웹 구현 가능</p>
                   </div>
                 </div>
               </div>
@@ -213,8 +178,8 @@
                   </div>
                   <div class="flip-card-back">
                     <p>
-                      DOM 객체를 제어하여<br />
-                      동적 사이트를 구현할 수 있습니다
+                      ES6 문법 사용<br />
+                      DOM 객체를 제어하여 동적 사이트 구현 가능
                     </p>
                   </div>
                 </div>
@@ -226,9 +191,8 @@
                   </div>
                   <div class="flip-card-back">
                     <p>
-                      Redux 사용 머머머머머머<br />
-                      Express/MongoDB를 연동하여 <br />Client와 Server를 구성할
-                      수 있습니다
+                      Redux 사용 경험, 프로젝트에 적용하며 현재 공부 중<br />
+                      Express/MongoDB를 연동하여 Client와 Server단 구성 가능
                     </p>
                   </div>
                 </div>
