change structure as full page is done

--- a/index.html
+++ b/index.html
@@ -28,45 +28,34 @@
       <!-- Main -->
       <section id="main" class="section main">
         <div class="wrap">
-          <h1 class="slide-right">RESUME</h1>
+          <h1 class="slide-right">SUMMARY</h1>
           <div class="main-container slide-left">
             <div class="details">
-              <div class="details-wrap">
-                <img src="imgs/Profile.jpg" alt="" />
+              <!-- <div class="details-wrap">
+                <img src="imgs/Profile.jpg" alt="profileImage" />
                 <ul class="my-info">
-                  <!-- <li><span>이름: ㅇㅇㅇ</span></li>
-                <li><span>생년월일: 0000-00-00</span></li>
-                <li><span>나이: 만 00세</span></li>
-                <li><span>주소: ㅇㅇㅇ ㅇㅇㅇ ㅇㅇㅇ ㅇㅇㅇ</span></li>
-                <li><span>학력: ㅇㅇㅇㅇㅇ ㅇㅇㅇㅇㅇ ㅇㅇ</span></li> -->
                   <li><span>이름: 유지수</span></li>
                   <li><span>생년월일: 1995-02-20</span></li>
                   <li><span>나이: 만 26세</span></li>
                   <li><span>주소: 경기도 안산시 단원구</span></li>
                   <li><span>학력: 국민대학교 전자공학부 졸업('19년)</span></li>
                 </ul>
-              </div>
+              </div> -->
               <div class="details-description-wrap">
                 <p class="my-description">
-                  <span
-                    >안녕하세요, <br />
-                    신입 프론트엔드 개발자 유지수입니다.</span
-                  >
+                  <span>안녕하세요, 신입 프론트엔드 개발자 유지수입니다.</span>
                   <br />
                   <br />
                   전자공학도로서 여러 토이 프로젝트를 진행해보며 만든 결과물에
                   뿌듯함과 성취감을 느껴왔습니다.<br />
                   하지만 HW 부품없이 내가 원하는 것을 만들 수는 없을까?<br />
-                  라는 질문에서부터 시작하여 웹 프론트엔드에 대해 알아가기
-                  시작했고,<br />
-                  단기간이지만 5개월이라는 시간동안 스스로 해야할 것을
-                  파악해가며 나아가고 있습니다.<br /><br />
+                  라는 질문에서부터 시작하여 웹 프론트엔드를 공부하며 나아가고
+                  있습니다.<br /><br />
                   개발자로 성장함에 있어 꾸준함을 무기로 성장해 나가겠습니다.
                 </p>
                 <button class="btn-resume">이력서 다운</button>
               </div>
             </div>
-            <p class="preview-title">Previews</p>
             <div class="preview">
               <div class="preview-skills" data-set="#skills">
                 <span class="this">Skills</span>
@@ -80,17 +69,16 @@
                   </div>
                   <div class="skillbox bot">
                     <div class="skillbox left">
-                      <i class="fas fa-database"> MongoDB</i>
+                      <i class="fab fa-react"> React</i>
                     </div>
                     <div class="skillbox right">
-                      <i class="fab fa-react"> React</i>
+                      <i class="fab fa-node-js"> Express</i>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="preview-projects" data-set="#projects">
                 <span class="this">Projects</span>
-                <!-- day18 day35 참고 -->
                 <div class="image-container">
                   <div class="each-image">
                     <strong>MarkUp</strong>
@@ -138,7 +126,7 @@
                 </div>
                 <div class="contents">
                   <span>010-6490-6210</span>
-                  <span>jisu129@<br />gmail.com</span>
+                  <span>jisu129@gmail.com</span>
                   <span>JISUY</span>
                 </div>
               </div>
@@ -416,36 +404,42 @@
           <h1>Contact</h1>
           <div class="contact-container">
             <div class="contact-info">
-              <div class="info-wrap">
-                <h3>Info.</h3>
-                <div class="info email">
-                  <i class="far fa-envelope icon"></i>
-                  <a href="#">jisu129@gmail.com</a>
-                </div>
-                <div class="info mobile">
-                  <i class="fas fa-mobile-alt icon"></i>
-                  <p>010-6490-6210</p>
-                </div>
-                <div class="info kktalk">
+              <!-- <h3>Info.</h3> -->
+              <div class="info email">
+                <span><i class="far fa-envelope icon"></i></span>
+                <a href="#">jisu129@gmail.com</a>
+              </div>
+              <div class="info mobile">
+                <span> <i class="fas fa-mobile-alt icon"></i></span>
+                <p>010-6490-6210</p>
+              </div>
+              <div class="info kktalk">
+                <span>
                   <span
                     class="iconify icon"
                     data-icon="vs-kakaotalk"
                     data-inline="false"
-                  ></span>
-                  <p>JISUY</p>
-                </div>
+                  ></span
+                ></span>
+                <p>JISUY</p>
               </div>
             </div>
+            <div class="contact-visits">
+              <a href="https://github.com/JISU-Y" target="blank">
+                <i class="fab fa-github-square"></i>
+              </a>
+              <a href="https://www.rocketpunch.com/@jisu129" target="blank">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </div>
           </div>
-          <div class="contact-links">
-            <a href="https://github.com/JISU-Y" target="blank">
-              <i class="fab fa-github-square"></i>
-            </a>
-            <a href="https://www.rocketpunch.com/@jisu129" target="blank">
-              <i class="fab fa-linkedin"></i>
-            </a>
-            <p class="contact__rights">2021 JISU - All rights reserved</p>
-          </div>
+        </div>
+        <div class="contact-links">
+          <p class="contact-rights">2021 JISU - All rights reserved</p>
+          <p>
+            이 사이트는 포트폴리오 용도로 제작되었으며, 상업적인 목적이 없음을
+            밝힙니다.
+          </p>
         </div>
       </section>
     </div>
